|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2011, PHP 5.3.7
- Zend Engine:
  . Fixed bug #54423 (classes from dl()'ed extensions are not destroyed). 
    (Tony, Dmitry)
  . Fixed bug #54262 (Crash when assigning value to a dimension in a non-array).
    (Dmitry)

- Core:
  . Fixed a crash inside dtor for error handling. (Ilia)
  . Fixed bug #54454 (substr_compare incorrectly reports equality in some 
    cases). (Pierrick)
  . Fixed bug #54180 (parse_url() incorrectly parses path when ? in fragment).
    (tomas dot brastavicius at quantum dot lt, Pierrick)
  . Fixed bug #48465 (sys_get_temp_dir() possibly inconsistent when using 
    TMPDIR on Windows). (Pierre)

- cURL
  . Added CURLINFO_REDIRECT_URL support. (Daniel Stenberg, Pierre)

- DateTime extension:
  . Fixed bug #54340 (DateTime::add() method bug). (Adam)
  . Fixed bug #54316 (DateTime::createFromFormat does not handle trailing '|'
    correctly). (Adam)
  . Fixed bug #54283 (new DatePeriod(NULL) causes crash). (Felipe)

- DBA extension:
  . Fixed bug #54242 (dba_insert returns true if key already exists). (Felipe)

- Filter extension:
  . Fixed bug #53037 (FILTER_FLAG_EMPTY_STRING_NULL is not implemented). (Ilia)
  
- LDAP extension:
  . Fixed bug #53339 (Fails to build when compilng with gcc 4.5 and DSO
    libraries). (Clint Byrum, Raphael)

- MySQL Improved extension:
  . Fixed Bug #54221 (mysqli::get_warnings segfault when used in multi queries).
    (Andrey)

- mysqlnd
  . Fixed crash when using more than 28,000 bound parameters. Workaround is to
    set mysqlnd.net_cmd_buffer_size to at least 9000. (Andrey)
    
- PDO DBlib driver:
  . Fixed bug #54167 (PDO_DBLIB returns null on SQLUNIQUE field).
    (mjh at hodginsmedia dot com, Felipe)

- PDO PostgreSQL driver:
  . Fixed bug #54318 (Non-portable grep option used in PDO pgsql
    configuration). (bwalton at artsci dot utoronto dot ca)

- PDO Oracle driver: